--- a/style.css
+++ b/style.css
@@ -279,3 +279,116 @@ nav{
 .seeMoreBtn:hover{
   background: #ff004f;
 }
+
+
+.contact-tab{
+  background: #080808;
+  display: grid;
+  place-items: center;
+  padding-top: 70px;
+  padding-bottom: 20px;
+}
+
+.contact-tab .content{
+  width: 80%;
+}
+
+.contact-tab .content > .sec-1{
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  margin-top: 10px;
+}
+
+.contact-tab .content > .sec-1 > .row-1,
+.contact-tab .content > .sec-1 > .row-2{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.contact-tab .content > .sec-1, .row-1 > i,
+.contact-tab .content > .sec-1, .row-2 > i
+{
+  font-size: 20px;
+  color: #ff004f;
+}
+
+.contact-tab .content > .sec-1 p{
+  font-size: 12px;
+}
+
+.contact-tab .content > .sec-1 > .row-3{
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  margin-top: 10px;
+}
+
+.contact-tab .content > .sec-1 > .row-3 > i{
+  font-size: 25px;
+  color: #ababab;
+}
+
+.contact-tab .content > .sec-1 > button{
+  width: 70%;
+  height: 50px;
+  font-size: 13px;
+  background: transparent;
+  border: 1px solid #ff004f;
+  background: #ff004f;
+  border-radius: 5px;
+  margin-top: 20px;
+  transition: transform .5s;
+}
+
+.contact-tab .content > .sec-1 > button:hover{
+  transform: scale(1.1);
+}
+
+.contact-tab .content > .sec-2{
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+  gap: 20px;
+}
+
+.contact-tab .content > .sec-2 > input,
+.contact-tab .content > .sec-2 > textarea{
+  height: 50px;
+  padding: 10px;
+  border: none;
+  background: #262626;
+  border-radius: 5px;
+  outline: none;
+  caret-color: #ff004f;
+}
+
+.contact-tab .content > .sec-2 > textarea{
+  height: 120px !important;
+  resize: none;
+}
+
+.contact-tab .content > .sec-2 > button[type="submit"]{
+  width: 60%;
+  height: 40px;
+  background: #ff004f;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+  transition: transform .5s;
+  font-size: 12px;
+  margin-top: 10px;
+}
+
+.contact-tab .content > .sec-2 > button[type="submit"]:hover{
+  transform: scale(1.1);
+}
+
+
+footer{
+  background: #262626;
+  font-size: 14px;
+  padding: 20px 10px;
+  text-align: center;
+}
